<resources>
    <string name="app_name">PodCast</string>

    <string name="action_settings">Settings</string>

    <string name="search_title">Search</string>
    <string name="search_hint">search podcast</string>
    <string name="connection_error">connection error</string>
    <string name="xml_error">xml error</string>

    <string name="menu_refresh">Refresh Episodes</string>
    <string name="menu_delete">delete</string>

    <string name="intent_pass_episode">bbr.podcast.episode</string>
    <string name="intent_pass_thumbnail">bbr.podcast.itunespodcast.thumbnail</string>
    <string name="intent_pass_feedUrl">bbr.podcast.itunespodcast.feedUrl</string>
    <string name="intent_pass_itunesimage">bbr.podcast.channel_itunesimage</string>
    <string name="intent_pass_playlistname">bbr.podcast.playlistname</string>
    <string name="intent_pass_playlistnumber">bbr.podcast.playlistnumber</string>
    <string name="intent_pass_playlist_eps_count">bbr.podcast.episodes_count</string>
    <string name="intent_pass_thumbs_list">bbr.podcast.thumbs_list</string>
    <string name="intent_pass_episodes_list">bbr.podcast.episodes_list</string>
    <string name="intent_pass_episodes_position">bbr.podcast.episodes_position</string>
    <string name="intent_pass_subscription">bbr.podcast.subscription</string>
    <string name="intent_pass_channel_title">bbr.podcast.channel_title</string>
    <string name="intent_pass_channel_description">bbr.podcast.channel_description</string>
    <string name="intent_pass_dicover_genre_name">bbr.podcast.genre_name</string>
    <string name="intent_pass_discover_genre_id">bbr.podcast.genre_id</string>
    <string name="intent_pass_discover_thumbs_array">bbr.podcast.discover_thumbs_array</string>
    <string name="intent_pass_itunes_podcast">bbr.podcast.itunes_podcast</string>

    <string name="button_share">share</string>
    <string name="button_subscribe">subscribe</string>

    <string name="read_more_text">READ MORE</string>

    <string name="currently_playing_podcast">Podcast currently playing</string>
    <string name="currently_playing_author">Author of currently playing podcast</string>
    <string name="currently_playing_extra_info">Extra info for currently playing podcast</string>
    <string name="play_pause">play or pause</string>

    <string name="add_playlist">add playlist</string>
    <string name="add_eps_to_playlist">add episode to playlist</string>
    <string name="add_button">add</string>
    <string name="cancel_button">cancel</string>
    <string name="subscribe">subscribe</string>
    <string name="unsubscribe">unsubscribe</string>
    
    <string name="pref_download">download over wifi only</string>
    <string name="pref_download_key">pref_download</string>
    <string name="background_image_for_the_player">background image for the player</string>
    <string name="button_for_previous_episode">button for previous episode</string>
    <string name="button_for_next_episode">button for next episode</string>
    <string name="playlist_episode_image">playlist episode image</string>
    <string name="image_of_the_podcast_channel">image of the podcast channel</string>
    <string name="download_button_for_this_episode">download button for this episode</string>
    <string name="favorite_button_for_this_episode">favorite button for this episode</string>
    <string name="button_for_adding_this_episode_to_a_playlist">button for adding this episode to a playlist</string>
    <string name="image_of_this_genre">image of this genre</string>
    <string name="button_for_more_actions">button for more actions</string>
    <string name="image_of_this_episode">image of this episode</string>
    <string name="more_info_for_this_episode">more info for this episode</string>
    <string name="image_of_a_episode_in_this_playlist">image of a episode in this playlist</string>
    <string name="image_of_an_episode_of_the_search">image of an episode of the search</string>
    <string name="button_for_subscription">button for subscription</string>
    <string name="button_for_sharing">button for sharing</string>
    <string name="button_for_creating_a_new_playlist">button for creating a new playlist</string>
    <string name="no_podcast_playing">No Podcast Playing</string>
    <string name="episode_title">episode title</string>
    <string name="episode_description">episode description</string>
    <string name="podcast_title">Podcast Title</string>
    <string name="genre_name">genre name</string>
    <string name="title_of_the_episode">Title of the Episode</string>
    <string name="pubdate_of_the_episode">PubDate of the Episode</string>
    <string name="duration">duration</string>
    <string name="playlist_name">playlist name</string>
    <string name="loading">Loading...</string>
    <string name="please_wait">Please Wait</string>
    <string name="error_downloading_data">Error downloading data</string>
    <string name="no_network">no network</string>
    <string name="not_on_wifi">not on wifi</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="message_for_delete_playlist">Are you sure you want to delete this playlist?</string>
    <string name="unsubscribe_channel">Unsubscribe channel</string>
    <string name="message_for_unsubscribe_channel">Are you sure you want to unsubscribe this channel?</string>


</resources>
