<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/subscription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/ic_library_add_black_24dp"
        android:background="?selectableItemBackgroundBorderless"
        android:text="@string/button_subscribe"
        android:contentDescription="@string/button_for_subscription"/>

    <ImageButton
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:src="@drawable/ic_share_black_24dp"
        android:background="?selectableItemBackgroundBorderless"
        android:text="@string/button_share"
        android:contentDescription="@string/button_for_sharing"/>
</LinearLayout>