<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:id="@+id/episode_actions_container">

        <ImageButton
            android:id="@+id/add_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_file_download_black_24dp"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/download_button_for_this_episode"/>
        <ImageButton
            android:id="@+id/add_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_favorite_black_24dp"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/favorite_button_for_this_episode"/>
        <ImageButton
            android:id="@+id/add_to_playlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_playlist_add_black_24dp"
            android:background="?selectableItemBackgroundBorderless"
            android:contentDescription="@string/button_for_adding_this_episode_to_a_playlist"/>

    </LinearLayout>

    <TextView
        android:id="@+id/episode_bottom_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/episode_title"
        android:textColor="@color/colorBlack"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:layout_below="@+id/episode_actions_container"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/episode_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/episode_description"
        android:layout_below="@+id/episode_bottom_title"
        android:layout_alignParentStart="true"
        android:padding="16dp"/>



</RelativeLayout>