<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp">

    <ImageView
        android:id="@+id/thumb"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:scaleType="centerCrop"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/image_of_this_episode"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="8dp"
        android:layout_toStartOf="@+id/episode_info"
        android:layout_toEndOf="@+id/thumb"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/episode_title"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_of_the_episode"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorPrimary" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/episode_pubDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/pubdate_of_the_episode"
                android:textSize="12sp"/>

            <TextView
                android:id="@+id/episode_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:text="@string/duration"
                android:textSize="12sp"
                android:textColor="@color/colorPrimary"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>



    </LinearLayout>

    <ImageButton
        android:id="@+id/episode_info"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="?selectableItemBackgroundBorderless"
        android:tintMode="src_in"
        android:src="@drawable/ic_info_black_24dp"
        android:contentDescription="@string/more_info_for_this_episode"/>

</RelativeLayout>