<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/cardview_light_background"
    android:elevation="4dp">
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/discover_thumb"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/image_of_this_genre"/>
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/discover_thumb1"
        android:layout_toEndOf="@+id/discover_thumb"
        android:contentDescription="@string/image_of_this_genre"/>
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/discover_thumb2"
        android:layout_below="@+id/discover_thumb"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/image_of_this_genre"/>
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/discover_thumb3"
        android:layout_below="@+id/discover_thumb"
        android:layout_toEndOf="@+id/discover_thumb"
        android:contentDescription="@string/image_of_this_genre"/>

    <TextView
        android:id="@+id/discover_name"
        android:layout_width="140dp"
        android:layout_height="36dp"
        android:layout_below="@+id/discover_thumb3"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:gravity="center_vertical"
        android:textColor="?android:attr/textColorPrimary"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/genre_name"/>

    <ImageButton
        android:id="@+id/more_discover_actions"
        android:src="@drawable/ic_more_vert"
        android:layout_width="20dp"
        android:layout_height="36dp"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        android:layout_below="@+id/discover_thumb3"
        android:layout_toEndOf="@+id/discover_name"
        android:layout_gravity="center_vertical"
        android:background="@color/cardview_light_background"
        android:gravity="center"
        android:contentDescription="@string/button_for_more_actions"/>


</RelativeLayout>