<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:padding="8dp">

    <ImageView
        android:id="@+id/thumb_nail_widget"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:scaleType="centerCrop"
        android:contentDescription="@string/currently_playing_podcast"
        android:layout_alignParentStart="true"/>

    <LinearLayout
        android:id="@+id/content_widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        android:layout_toEndOf="@id/thumb_nail_widget"
        android:layout_centerVertical="true">
        <TextView
            android:id="@+id/title_widget"
            tools:text="The Best Podcast EVAH1111 THE BEST"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/currently_playing_podcast"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="?android:attr/textColorPrimary"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/author_widget"
                tools:text="John Doe"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/currently_playing_author"
                android:textAppearance="?android:attr/textAppearanceSmall"/>

            <TextView
                android:id="@+id/extra_info_widget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/currently_playing_extra_info"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/colorPrimary"
                android:layout_alignParentEnd="true"
                android:visibility="gone"
                tools:text="extra info" />

        </RelativeLayout>

    </LinearLayout>

    <!--ImageButton
        android:id="@+id/play_pause_widget"
        android:background="#ffffff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/play_pause"
        android:padding="8dp"
        android:src="@drawable/ic_play_arrow_black_36dp"
        android:tint="@color/colorAccent" /-->

</RelativeLayout>